# Causal_Sense

./: .gitignore  README.md  data.csv  main.py  output.json  pyproject.toml  requirements.txt  run_example.py
.claude/: settings.local.json
Documentation/: 01-architecture-overview.md  02-frontend.md  03-fastapi-backend.md  04-eda-pipeline.md  05-insight-builder.md  06-market-research.md  07-data-and-storage.md  08-api-reference.md  README.md
INSIGHT_BUILDER_NEW/: orchestrator.py  requirements.txt
INSIGHT_BUILDER_NEW/.claude/: settings.local.json
INSIGHT_BUILDER_NEW/api/: sessions.py
INSIGHT_BUILDER_NEW/context/: dag_hypotheses.py  enricher.py
INSIGHT_BUILDER_NEW/domain/: knowledge_agent.py  schema_mapper.py
INSIGHT_BUILDER_NEW/execution/: renderer.py  runner.py
INSIGHT_BUILDER_NEW/hypotheses/: generator.py
INSIGHT_BUILDER_NEW/narration/: narrator.py
INSIGHT_BUILDER_NEW/qa/: answer.py  intent_parser.py  language_guard.py
INSIGHT_BUILDER_NEW/query/: ask.py  query_agent.py
INSIGHT_BUILDER_NEW/templates/: concentration.py.j2  correlation.py.j2  ratio.py.j2  trend.py.j2
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  (+1 more)
backend/: db.ts  index.ts  package-lock.json  package.json  tsconfig.json
backend_fastapi/: .env.example  requirements.txt  run.py
frontend/: package-lock.json  package.json
insight_builder/: ARCHITECTURE.md  kpi_ranking.py  orchestrator.py
market_research/: __init__.py  agent.py  dag_builder.py  data_profiler.py  llm_client.py  models.py  research_agent.py  search_client.py
tools/: explore_dataset.py
(+86 files in other folders)
