[project]
name = "causal-sense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "networkx>=3.6.1",
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "openpyxl",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "uvicorn>=0.51.0",
]
